--- a/src/main/webapp/work/employee.html
+++ b/src/main/webapp/work/employee.html
@@ -69,6 +69,18 @@
             <div field="bankCardNumber" width="100" allowSort="false" headerAlign="center">卡号
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="200"/>
             </div>
+            <div field="name" width="120" headerAlign="center" allowSort="true">加班
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="name" width="120" headerAlign="center" allowSort="true">饭贴
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="name" width="120" headerAlign="center" allowSort="true">保密
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
+            <div field="name" width="120" headerAlign="center" allowSort="true">通讯费
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="120"/>
+            </div>
             <!--<div field="age" width="100" allowSort="true" headerAlign="center">年龄</div>-->
         </div>
     </div>
