--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -109,7 +109,7 @@
         $.ajax({
             url: "http://localhost:8080/ws/employee/v1/",
             data: json,
-            type: "post",
+            type: 'post',
             dataType: 'json',
             contentType: "application/json;charset=utf-8",
             success: function (text) {
