--- a/src/main/webapp/dms/index.html
+++ b/src/main/webapp/dms/index.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>jQuery MiniUI V3.0 Demo</title>
+    <title>DMS</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta name="keywords" content="jquery,datagrid,grid,表格控件,ajax,web开发,java开发,.net开发,tree,table,treegrid"/>
     <meta name="description"
