--- a/src/main/webapp/dms/employee.html
+++ b/src/main/webapp/dms/employee.html
@@ -43,7 +43,7 @@
 <div class="mini-fit">
 
     <div id="datagrid1" class="mini-datagrid" style="width:100%;height:100%;"
-         url="http://localhost:8080/ws/employee/v1"
+         url="http://localhost:8080/ws/employee/v1/employees"
          ajaxOptions="{type: 'get', contentType: 'application/json;charset=utf-8'}"
          idField="id" sizeList="[5,10,20,50]" pageSize="10" allowCellEdit="true" allowCellSelect="true"
          multiSelect="true">
@@ -63,10 +63,13 @@
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
             <!--<div field="gender" width="100" renderer="onGenderRenderer" align="center" headerAlign="center">性别</div>-->
+            <div field="bankCardNumber" width="100" allowSort="false" headerAlign="center">卡号
+                <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
+            </div>
             <div field="baseWage" width="100" allowSort="true" headerAlign="center">基本工资
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="bankCardNumber" width="100" allowSort="false" headerAlign="center">卡号
+            <div field="workingAgeSubsidy" width="100" headerAlign="center" allowSort="true">工龄
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="overtime" width="100" headerAlign="center" allowSort="false">加班
@@ -107,7 +110,7 @@
         alert(json);
         grid.loading("保存中，请稍后......");
         $.ajax({
-            url: "http://localhost:8080/ws/employee/v1/",
+            url: "http://localhost:8080/ws/employee/v1/employees",
             data: json,
             type: 'post',
             dataType: 'json',
