--- a/src/main/webapp/dms2/index.html
+++ b/src/main/webapp/dms2/index.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>DMS</title>
+    <link rel="stylesheet" type="text/css" href="themes/default/easyui.css">
+    <link rel="stylesheet" type="text/css" href="themes/icon.css">
+    <link rel="stylesheet" type="text/css" href="../css/demo.css">
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.easyui.min.js"></script>
 </head>
-<body>
-$END$
+<body class="easyui-layout">
+<div data-options="region:'north',border:false" style="height:60px;background:#DFFAEB;padding:10px">
+    上海佳园
+</div>
+<div data-options="region:'west',split:true" style="width:150px;padding:1px;">
+    <div class="easyui-accordion" data-options="fit:true,border:false">
+        <div title="员工管理" style="width:150px;padding:1px;">
+            <ul class="easyui-tree">
+                <li>
+                    <span>Foods</span>
+                    <ul>
+                        <li>
+                            <span>Fruits</span>
+                            <ul>
+                                <li>apple</li>
+                                <li>orange</li>
+                            </ul>
+                        </li>
+                        <li onclick="onClick">
+                            <span>Vegetables</span>
+                            <ul>
+                                <li>tomato</li>
+                                <li>carrot</li>
+                                <li>cabbage</li>
+                                <li>potato</li>
+                                <li>lettuce</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div title="财务管理" data-options="selected:true" style="width:150px;padding:1px;">
+            <ul class="easyui-tree">
+                <li>
+                    <span><a href="finance.html" target="main">财务管理</a></span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<!--<div data-options="region:'east',split:true,collapsed:true,title:'East'" style="width:100px;padding:10px;">east region</div>-->
+<div data-options="region:'south',border:false"
+     style="height:50px;background:#DFFAEB;padding:10px;">
+    Copyright © 上海
+</div>
+<!--<div data-options="region:'center',title:'Center'"></div>-->
+<div id="tt" class="easyui-tabs" data-options="region:'center',tools:'#tab-tools'"
+     style="width:700px;height:250px"/>
 </body>
+
+<script>
+    $(function () {
+        $(document).bind('contextmenu', function (e) {
+            e.preventDefault();
+            $('#mm').menu('show', {
+                left: e.pageX,
+                top: e.pageY
+            });
+        });
+    });
+</script>
+
 </html>
