--- a/src/main/webapp/dms/projectCommision.html
+++ b/src/main/webapp/dms/projectCommision.html
@@ -52,79 +52,79 @@
          multiSelect="true">
         <div property="columns">
             <div type="indexcolumn"></div>
-            <div field="designer" width="100" headerAlign="center" allowSort="true">designer
+            <div field="designer" width="100" headerAlign="center" allowSort="true">设计师
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="designerAssistant" width="100" headerAlign="center" allowSort="true">designerAssistant
+            <div field="designerAssistant" width="100" headerAlign="center" allowSort="true">设计助理
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="acNumber" width="100" headerAlign="center" allowSort="true">acNumber
+            <div field="acNumber" width="100" headerAlign="center" allowSort="true">受理单号
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="customerName" width="100" headerAlign="center" allowSort="true">customerName
+            <div field="customerName" width="100" headerAlign="center" allowSort="true">客户名称
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="contractTotal" width="100" headerAlign="center" allowSort="true">contractTotal
+            <div field="contractTotal" width="100" headerAlign="center" allowSort="true">合同总价
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="purchaseAgentFee" width="100" headerAlign="center" allowSort="true">purchaseAgentFee
+            <div field="purchaseAgentFee" width="100" headerAlign="center" allowSort="true">代采购费
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="projectChangeTotal" width="100" headerAlign="center" allowSort="true">projectChangeTotal
+            <div field="projectChangeTotal" width="100" headerAlign="center" allowSort="true">项目变更费用
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="customerPay" width="100" headerAlign="center" allowSort="true">customerPay
+            <div field="customerPay" width="100" headerAlign="center" allowSort="true">已付款
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="payContractRatio" width="100" headerAlign="center" allowSort="true">payContractRatio
+            <div field="payContractRatio" width="100" headerAlign="center" allowSort="true">合同付款比例
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="payProjectRatio" width="100" headerAlign="center" allowSort="true">payProjectRatio
+            <div field="payProjectRatio" width="100" headerAlign="center" allowSort="true">项目付款比例
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="contractState" width="100" headerAlign="center" allowSort="true">contractState
+            <div field="contractState" width="100" headerAlign="center" allowSort="true">项目状态
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="contractState" width="100" headerAlign="center" allowSort="true">commisonState
+            <div field="contractState" width="100" headerAlign="center" allowSort="true">佣金状态
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="designCommisionRate" width="100" headerAlign="center" allowSort="true">designCommisionRate
+            <div field="designCommisionRate" width="100" headerAlign="center" allowSort="true">设计师提成比例
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="designerAssistantCommisionRate" width="100" headerAlign="center" allowSort="true">
-                designerAssistantCommisionRate
+                设计助理提成比例
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="actualStartTime" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
-                actualStartTime
+                实际开工时间
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
             <div field="actualEndTime" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
-                actualEndTime
+                实际竣工时间
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
             <div field="contractDate" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
-                contractDate
+                合同时间
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
             <div field="firstCommision" width="100" headerAlign="center" allowSort="true">
-                firstCommision
+                首次提成
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="firstCommisionDate" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
-                firstCommisionDate
+                首次提成日期
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
             <div field="balanceTime" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
-                balanceTime
+                项目结账时间
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
             <div field="balanceCommision" width="100" headerAlign="center" allowSort="true">
-                balanceCommision
+                尾款提成
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
             <div field="balanceCommisionDate" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
-                balanceCommisionDate
+                尾款提成时间
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
 
