project commision: load and save

--- a/src/main/webapp/dms/projectCommision.html
+++ b/src/main/webapp/dms/projectCommision.html
@@ -52,78 +52,79 @@
          multiSelect="true">
         <div property="columns">
             <div type="indexcolumn"></div>
-            <div field="designer" width="100" headerAlign="center" allowSort="true">designer
+            <div field="designer" width="100" headerAlign="center" allowSort="false">designer
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="designerAssistant" width="100" headerAlign="center" allowSort="true">designerAssistant
+            <div field="designerAssistant" width="100" headerAlign="center" allowSort="false">designerAssistant
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="acNumber" width="100" headerAlign="center" allowSort="true">acNumber
+            <div field="acNumber" width="100" headerAlign="center" allowSort="false">acNumber
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="customerName" width="100" headerAlign="center" allowSort="true">customerName
+            <div field="customerName" width="100" headerAlign="center" allowSort="false">customerName
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="contractTotal" width="100" headerAlign="center" allowSort="true">contractTotal
+            <div field="contractTotal" width="100" headerAlign="center" allowSort="false">contractTotal
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="purchaseAgentFee" width="100" headerAlign="center" allowSort="true">purchaseAgentFee
+            <div field="purchaseAgentFee" width="100" headerAlign="center" allowSort="false">purchaseAgentFee
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="projectChangeTotal" width="100" headerAlign="center" allowSort="true">projectChangeTotal
+            <div field="projectChangeTotal" width="100" headerAlign="center" allowSort="false">projectChangeTotal
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="customerPay" width="100" headerAlign="center" allowSort="true">customerPay
+            <div field="customerPay" width="100" headerAlign="center" allowSort="false">customerPay
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="payContractRatio" width="100" headerAlign="center" allowSort="true">payContractRatio
+            <div field="payContractRatio" width="100" headerAlign="center" allowSort="false">payContractRatio
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="payProjectRatio" width="100" headerAlign="center" allowSort="true">payProjectRatio
+            <div field="payProjectRatio" width="100" headerAlign="center" allowSort="false">payProjectRatio
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="contractState" width="100" headerAlign="center" allowSort="true">contractState
+            <div field="contractState" width="100" headerAlign="center" allowSort="false">contractState
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="contractState" width="100" headerAlign="center" allowSort="true">commisonState
+            <div field="commisionState" width="100" headerAlign="center" allowSort="false">commisionState
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="designCommisionRate" width="100" headerAlign="center" allowSort="true">designCommisionRate
+            <div field="designCommisionRate" width="100" headerAlign="center" allowSort="false">designCommisionRate
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="designerAssistantCommisionRate" width="100" headerAlign="center" allowSort="true">
+            <div field="designerAssistantCommisionRate" width="100" headerAlign="center" allowSort="false">
                 designerAssistantCommisionRate
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="actualStartTime" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
+            <div field="actualStartTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 actualStartTime
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="actualEndTime" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
+            <div field="actualEndTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 actualEndTime
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="contractDate" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
+            <div field="contractDate" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 contractDate
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="firstCommision" width="100" headerAlign="center" allowSort="true">
+            <div field="firstCommision" width="100" headerAlign="center" allowSort="false">
                 firstCommision
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="firstCommisionDate" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
+            <div field="firstCommisionDate" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 firstCommisionDate
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="balanceTime" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
+            <div field="balanceTime" width="100" headerAlign="center" allowSort="false" dateFormat="yyyy-MM-dd">
                 balanceTime
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="balanceCommision" width="100" headerAlign="center" allowSort="true">
+            <div field="balanceCommision" width="100" headerAlign="center" allowSort="false">
                 balanceCommision
                 <input property="editor" class="mini-textbox" style="width:100%;" minWidth="100"/>
             </div>
-            <div field="balanceCommisionDate" width="100" headerAlign="center" allowSort="true" dateFormat="yyyy-MM-dd">
+            <div field="balanceCommisionDate" width="100" headerAlign="center" allowSort="false"
+                 dateFormat="yyyy-MM-dd">
                 balanceCommisionDate
                 <input property="editor" class="mini-datepicker" style="width:100%;" minWidth="100"/>
             </div>
